--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
     }
    ],
    "source": [
-    "'vandelay.com'.concatenate(\"www.\") # 'www.vandelay.com'"
+    "'vandelay.com'.concat(\"www.\") # 'www.vandelay.com'"
    ]
   },
   {
