--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -282,13 +282,13 @@
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-9e428c28e5fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m'vandelay.com'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"www.\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 'www.vandelay.com'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-16-39cc48d70a33>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m'vandelay.com'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"www.\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 'www.vandelay.com'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'concat'"
      ]
     }
    ],
    "source": [
-    "'vandelay.com'.concat(\"www.\") # 'www.vandelay.com'"
+    "'vandelay.com'.concat(+\"www.\") # 'www.vandelay.com'"
    ]
   },
   {
